Add tests using Jest. Tests will not be included in the docker images. To run tests, use docker-compose, which watches changes to all files.

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -7,3 +7,10 @@ services:
       - "5000:5000"
     volumes:
       - ./:/opt/node-api
+  tests:
+    build:
+      context: .
+      target: local
+    command: [ "npm", "test" ]
+    volumes:
+      - ./:/opt/node-api
