--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Dockerise node application with tests",
   "main": "index.js",
   "scripts": {
-    "test": ""
+    "test": "jest --watchAll"
   },
   "repository": {
     "type": "git",
@@ -20,6 +20,7 @@
     "express": "^4.17.1"
   },
   "devDependencies": {
+    "jest": "^27.0.6",
     "nodemon": "^2.0.12"
   }
 }
