--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -7,6 +7,7 @@ services:
       - "5000:5000"
     volumes:
       - ./:/opt/node-api
+      - ./node_modules
   tests:
     build:
       context: .
@@ -14,3 +15,4 @@ services:
     command: [ "npm", "test" ]
     volumes:
       - ./:/opt/node-api
+      - ./node_modules
